syntax = "proto3";
package proto;

message ChatReq {
    string msg = 1;
}

message ChatRes {
    string msg = 1;
    int64 session_id = 2;
}
